# DiffCache

./: .gitignore  pyproject.toml  requirements.txt  simple_test.py  test.py
config/: Qwen2.5-7B-Instruct.json
diffcache_cpu/: Cargo.toml
diffcache_cpu/src/: dualheap.rs  lib.rs  nsw.rs  tlset.rs
eval/impl/PQCache/vq_method/: llama_patch.py
eval/pcie/: bench.py
eval/raf/: book.txt  extract.py  mer.py  r_hnsw.py  r_pqcache.py  r_retroinfer.py  result.csv
eval/scripts/: trunc.py
example/niah/: run.py
example/summary/: run.py
kvcache/: diffcache.py  index_layer.py
lib/diffcache_cpu/: .gitignore  Cargo.toml  diffcache_cpu.pyi
lib/diffcache_cpu/src/: lib.rs  nsw.rs
lib/diffcache_cpu/tools/: change-turbo.sh  gen_qk.py
models/: base.py  llama.py  qwen.py
src/diffcache/: __init__.py  _cpu.pyi  base.py  llama.py  qwen.py
src/diffcache/config/: Qwen2.5-7B-Instruct.json
src/diffcache/kvcache/: diffcache.py  index_layer.py
tools/: analyze.ipynb  analyze_attn_samples.ipynb  decode.py  dump_qk_gt.py  get_logits.py  raise-freq.sh  sample_attn_distrib.py  sgl_test.py  topk_test.py
