[package]
name = "diffcache_cpu"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
thread_local = "1.1.9"
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
simsimd = "6.5.3"
itertools = "0.14.0"
indicatif = "0.18.0"
core_affinity = "0.8.3"
hugepage-rs = "0.1.0"
futures = "0.3.31"
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.11.0"
ndarray-npy = "0.9.1"
numpy = "0.27.0"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
metrics = "0.24.2"
metrics-exporter-tcp = "0.11.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }

[profile.release]
debug = true

[package.metadata.maturin]
name = "diffcache_cpu"

[lib]
name = "diffcache_cpu"
path = "src/lib.rs"
crate-type = ["cdylib"]
